# FairyMander

./: .gitignore  FIT_Website.md  README.md  pyproject.toml
CurrentCongressionalDistricts/: State_InformationFolium.docx
Deliverables/: FairyMander-SoftwareDesign-Final.docx  Software Design - Draft.docx
DistrictGenerator/: displayDistricts.ipynb  displayDistricts.py  generator.py
FairnessMetic/: FairnessDemo.ipynb  FairnessModule.py  cleancurrent.py  usaFairnessModule.py
FairyMander/: CONTRIBUTING.md  CurrentSates.ipynb  FoliumLongLat.csv  alpha_demo.ipynb  ca_efficiency-gap.ipynb  ca_polsby-Popper.ipynb  census_data_scraper.py  data.py  fairness.py  ga_fairness.ipynb  generator.py  li_efficiency-Gap.ipynb  li_polsbyPopper.ipynb  mi_efficiency-gap.ipynb  mi_polsbyPopper.ipynb  requirements.txt  ri_fairness.ipynb  setup.py  ut_fairness.ipynb  ut_polsby-popper.ipynb  ut_polsbyPopper.ipynb  ut_pp.ipynb  wi_fairness.ipynb
FairyManderSite/: about.css  about.html  documents.css  documents.html  index.html  meet_our_team.css  meet_our_team.html  meet_the_sponsor.css  meet_the_sponsor.html  schedule.css  schedule.html  styles.css
InteractiveMap/: README.md  about.css  about.html  contact.css  contact.html  glossary.css  glossary.html  index.css  index.html  map.js  states.css  statesDropDown.js  styles.css
TechDemo/: Congressional_Map_Data.csv  Demo3.ipynb  README.md  demo2.ipynb  requirements.txt
fairymander/: __init__.py  alpha_demo.ipynb  census_data_scraper.py  data.py  fairness.py  folium_converter.py  generator.py  requirements.txt
website 1.0/: about.html  (+6 more)
(+650 files in other folders)
